--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -7,7 +7,7 @@
             <!-- Image -->
             <div class="relative">
                 <img 
-                    src="https://images.unsplash.com/photo-1582037928769-181f2644ecb7?auto=format&fit=crop&q=80"
+                    src="/images/cheminee-ancienne-restauree.webp"
                     alt="Cheminée moderne installée dans un salon"
                     class="rounded-lg shadow-xl object-cover w-full h-[500px]"
                 />
