--- a/src/pages/a-propos.astro
+++ b/src/pages/a-propos.astro
@@ -38,7 +38,7 @@ const description = "Découvrez l'histoire, l'expertise et l'engagement de Chemi
                     </p>
                 </div>
                 <div class="relative h-[400px]">
-                    <div class="absolute inset-0 bg-[url('/images/about-story.jpg')] bg-cover bg-center rounded-lg shadow-xl"></div>
+                    <div class="absolute inset-0 bg-[url('/images/cheminee-ancienne-restauree.webp')] bg-cover bg-center rounded-lg shadow-xl"></div>
                 </div>
             </div>
         </div>
