--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,6 +17,7 @@ const { title, description = "Cheminées Lille - Votre expert en installation et
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <meta name="description" content={description} />
+    <meta name="google-site-verification" content="SmaODU5Vdzgo3tV7F13vQFd5pjyH1rrQVXa4qJIOmoY" />
     <title>{title}</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Montserrat:wght@500;600;700&display=swap" rel="stylesheet">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -26,6 +27,7 @@ const { title, description = "Cheminées Lille - Votre expert en installation et
     <slot />
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
+      // @ts-ignore
       AOS.init({
         duration: 800,
         once: true,
